# kaggle-MLB-Player-Digital-Engagement-Forecasting

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
notebook/: nb001_creating_unnested_dataset.ipynb  nb002_eda.ipynb  nb003_lgb_baseline.ipynb  nb004_lgb_lag.ipynb  nb004_lgb_target_agg.ipynb  nb005_eda.ipynb  nb006_lgb.ipynb  nb007_lgb.ipynb  nb008_lgb.ipynb  nb009_lgb.ipynb  nb010_lgb.ipynb  nb011_lgb.ipynb  nb012_lgb.ipynb  nb013_lgb.ipynb  nb015_lgb.ipynb  nb016_lgb.ipynb  nb017_lgb.ipynb  nb018.ipynb  nb019_lgb.ipynb  nb020_lgb.ipynb  nb021_lgb.ipynb  nb022_lgb.ipynb  nb023_lgb.ipynb  nb024_lgb.ipynb  nb025_lgb.ipynb  nb026_lgb.ipynb
