[tool.poetry]
name = "mlb-player-digital-engagement-forecasting"
version = "0.1.0"
description = ""
authors = ["azupero_adolph <azupero.adolph@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
plotly = "^4.14.3"
seaborn = "^0.11.1"
jupyterlab = "^3.0.16"
tqdm = "^4.61.1"
ipywidgets = "^7.6.3"
scikit-learn = "^0.24.2"
matplotlib-venn = "^0.11.6"
sweetviz = "^2.1.2"
kaggle = "^1.5.12"
lightgbm = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
